[build-system]
requires = ["setuptools", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "clean-notebook"
readme = "readme.md"
description = "A simple package to clean Jupyter notebooks"
requires-python = ">=3.8"
keywords = ["clean", "notebook"]
license = { text = "BSD 3-Clause License" }
dynamic = ["version"]
authors = [{name = "Simon Hansen"}]
maintainers = [{name = "Simon Hansen"}]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/hoxbro/clean_notebook"
Source = "https://github.com/hoxbro/clean_notebook"

[project.scripts]
clean-notebook = "clean_notebook.__main__:main"

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "mypy", "pre-commit"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["clean_notebook*"]
namespaces = false

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}+{ccount}.g{sha}"
dirty_template = "{tag}+{ccount}.g{sha}.dirty"

[tool.pytest.ini_options]
addopts = "-vv"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
files = ["src", "tests"]

strict = true

pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

implicit_reexport = true
namespace_packages = true
warn_return_any = false
warn_unreachable = true
disallow_untyped_decorators = false

[tool.ruff]
target-version = "py38"
line-length = 88

select = [
    "B",
    "C90",
    "E",
    "F",
    "I",
    "ICN",
    "ISC",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "SIM",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "E402", # Module level import not at top of file
    "E731", # Do not assign a lambda expression, use a def
    "E741", # Ambiguous variable name
]
fix = true
unfixable = [
    "F401", # unused imports
]

[tool.ruff.per-file-ignores]
"tests/**/*" = ["S101"]

[tool.ruff.isort]
known-first-party = ["clean_notebook"]
